--- a/site.html
+++ b/site.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ifunny2</title>
+    <title>IF Reload</title>
 </head>
 <body>
-    <h1>Bem Vindo!</h1>
-    <p>esse é o index do ifunny 2</p>
-    <img src="" onshow="imgload()">
-    <input type="button" value="mandar meme" onclick="mandar()">
+    <h1>Bem vindo ao ifunny reload</h1>
+    <input type="button" value="mandar meme" onclick="redirectToMeme()">
     <script>
-        function mandar(){
-            location.replace('/site')
+        function redirectToMeme(){
+            location.replace('/upload')
         }
     </script>
 </body>
